Fix vertical alignment of icons in buttons

--- a/src/ui/views/input.less
+++ b/src/ui/views/input.less
@@ -44,7 +44,6 @@
             overflow: hidden;
 
             button {
-                // position: absolute;
                 display: inline-block;
                 flex: none;
                 margin-left: 5px;
@@ -58,7 +57,7 @@
                 span {
                     display: inline-block;
                     font-size: 16px;
-                    line-height: 24px;
+                    line-height: 25px;
                     height: 24px;
                     overflow: hidden
                 }
